fix missing border

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -198,6 +198,7 @@ h2 {
 .section-intro {
 	width: 50%;
 	padding-left: 80px;
+	border-left: 1px solid #dbdbdb;
 }
 .section-contact {
 	margin-bottom: 54px;
